Reinicio de proyecto

--- a/intento1/index.css
+++ b/intento1/index.css
@@ -1,4 +1,4 @@
-
+@media screen and (min-width: 400px) and (max-width: 500px) {}
 body{
     background-color:#ede9dd;
     font-family: 'Times New Roman', Times, serif;
