--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+@media (max-width: 900px) {
+    body{
+        font-size: 4px;
+    }
+    h1{
+        font-size: 6px;
+    }
+}
 body {
     background-color: rgb(87, 28, 28)
         /*#ede9dd*/
@@ -14,106 +22,180 @@ body {
 
 #div_zones {
     border: 1ch black;
-    width: 40vw ;
+    width: 40vw;
     float: right;
-    
     background-color: rgb(201, 126, 27);
-    position:relative;
-    justify-content: space-between;
-    display: flex;
-    align-items: normal;
+    position: fixed;
+    right: 10px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    display:flex;
+    align-items:center;
+    font-size: 10px;
+    
+    
 }
 
 /*there are 23 zones in the map*/
 #div_zones #slots:nth-child(1) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    
 }
 
 #div_zones #slots:nth-child(2) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(3) {
-    border: 5px solid red;
-    order: 1;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(4) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(5) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(6) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(7) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(8) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(9) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(10) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(11) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(12) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(13) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(14) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(15) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(16) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(17) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(18) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(19) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(20) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(21) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(22) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #div_zones #slots:nth-child(23) {
-    border: 5px solid red;
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    justify-content: space-around;
 }
