--- a/index.css
+++ b/index.css
@@ -40,7 +40,8 @@ h1{
     align-items:center;
     font-size: 8px;
     text-align: center;
-    user-select: none;
+    user-select:none;
+
 }
 
 #div_zones #slots:hover {
@@ -211,4 +212,29 @@ h1{
     margin-bottom: 0px;
     margin-top: 0px;
     justify-content: space-around;
+}
+
+/*Experimental*/
+.overlay {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75); /* Semi-transparent black background */
+    z-index: 1; /* Ensure overlay is above other content */
+    justify-content: center;
+    align-items: center;
+}
+.info {
+    background-color: #0c0a0a; /* Background color for information */
+    padding: 20px;
+    border-radius: 5px;
+}
+.close-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
 }
