--- a/index.css
+++ b/index.css
@@ -4,12 +4,25 @@
     }
     h1{
         font-size: 6px;
+        
+    }
+    #h1_message{
+        font-size: 24px;
+    }
+    #close{
+        position: relative;
+        width: 100px;
+        height: 100px;
+        margin-left: 40vw;
+        
     }
 }
 body {
     background-color: rgb(87, 28, 28);
-        /**/
+    overflow: hidden;
     font-family: Adventure Time;
+    margin-left: 0px;
+    margin-top: 0px;
 }
 @font-face {
     font-family: Adventure Time;
@@ -24,7 +37,8 @@ h1{
 }
 
 #div_map {
-    position: absolute;
+    position:absolute;
+    
 }
 
 #div_zones {
@@ -38,19 +52,22 @@ h1{
     justify-content: space-around;
     display:flex;
     align-items:center;
-    font-size: 8px;
+    font-size: 14px;
     text-align: center;
     user-select:none;
-
 }
 
-#div_zones #slots:hover {
+#HTML{color: #f1672c;}
+#CSS{color: #30a8dc;}
+#JS{color: #efc025;}
+
+#div_zones .slots:hover {
     /*cambiar por una flecha que rota tal vez?*/
     background-color: rgb(144, 211, 43);
     text-decoration: underline;
 }
 /*there are 23 zones in the map*/
-#div_zones #slots:nth-child(1) {
+#div_zones .slots:nth-child(1) {
     border: 3px solid red;
     flex-basis: 45%;    
     margin-bottom: 0px;
@@ -58,170 +75,170 @@ h1{
     
 }
 
-#div_zones #slots:nth-child(2) {
-    border: 3px solid red;
-    flex-basis: 45%;
-    
-    margin-bottom: 0px;
-    margin-top: 0px;
-}
-
-#div_zones #slots:nth-child(3) {
+#div_zones .slots:nth-child(2) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(4) {
+#div_zones .slots:nth-child(3) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(5) {
+#div_zones .slots:nth-child(4) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(6) {
+#div_zones .slots:nth-child(5) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(7) {
+#div_zones .slots:nth-child(6) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(8) {
+#div_zones .slots:nth-child(7) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(9) {
+#div_zones .slots:nth-child(8) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(10) {
+#div_zones .slots:nth-child(9) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(11) {
+#div_zones .slots:nth-child(10) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(12) {
+#div_zones .slots:nth-child(11) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(13) {
+#div_zones .slots:nth-child(12) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(14) {
+#div_zones .slots:nth-child(13) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(15) {
+#div_zones .slots:nth-child(14) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(16) {
+#div_zones .slots:nth-child(15) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(17) {
+#div_zones .slots:nth-child(16) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(18) {
+#div_zones .slots:nth-child(17) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(19) {
+#div_zones .slots:nth-child(18) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(20) {
+#div_zones .slots:nth-child(19) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(21) {
+#div_zones .slots:nth-child(20) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(22) {
+#div_zones .slots:nth-child(21) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-#div_zones #slots:nth-child(23) {
+#div_zones .slots:nth-child(22) {
+    border: 3px solid red;
+    flex-basis: 45%;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+#div_zones .slots:nth-child(23) {
     border: 3px solid red;
     flex-basis: 45%;
     margin-bottom: 0px;
     margin-top: 0px;
     justify-content: space-around;
+    line-height: 0.9;
 }
 
-/*Experimental*/
-.overlay {
-    display: none;
+/*Experimental, factible*/
+#overlay {
+    display:none;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 58vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.75); /* Semi-transparent black background */
     z-index: 1; /* Ensure overlay is above other content */
     justify-content: center;
@@ -229,12 +246,59 @@ h1{
 }
 .info {
     background-color: #0c0a0a; /* Background color for information */
+    color: antiquewhite;
     padding: 20px;
     border-radius: 5px;
 }
-.close-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    cursor: pointer;
+
+#close{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    margin-left: 50vw;
+    z-index: 999;
 }
+#backOfMessage{
+    background-color:rgba(0, 0, 0, 0.75);
+    display:inline;
+    position:absolute;z-index: 100;
+    margin-top: 0px;
+    margin-left: 0px;
+    width: 100vw;
+    height: 100vh;
+}
+#messageNoResponsive{
+    border-radius: 10%;
+    background-image: url(images/messageBackground.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    /* background-color: aliceblue; */
+    color: rgb(0, 0, 0);
+    position:absolute;
+    width: 20vw;
+    min-width: 200px;
+    height:fit-content;
+    margin-left: 40vw;
+     margin-bottom: 35vw;
+     margin-top: 35vh;
+   
+    z-index: 1000;
+    text-align: center;
+    text-shadow: 0 0 10px #fff, 0 0 10px #fff;
+}
+#buttonCloseMessage{
+    font-family: Adventure Time;
+    font-size: 24px;
+    width: 10vh;
+    height: 5vh;
+    height: fit-content;
+    width: fit-content;
+    text-align: center;
+    
+}
+/* #imgMessage{
+    width: 100%;
+    height: 100%;
+    blo
+} */
