--- a/index.css
+++ b/index.css
@@ -266,6 +266,19 @@ h1{
     align-items: center;
     overflow: auto;
 }
+#overlay_menu p{
+    color: rgb(173, 173, 173);
+    font-size: 24px;
+}
+#overlay_menu h1{
+    color: rgb(214, 214, 214);
+    font-size: 44px;
+}
+#overlay_menu li{
+    color: rgb(94, 82, 82);
+    font-size: 20px;
+}
+
 .info {
     background-color: #0c0a0a; /* Background color for information */
     color: antiquewhite;
