Add README.md, reorganized directories and changes to the initial message

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,9 @@ body {
 }
 @font-face {
     font-family: Adventure Time;
-    src: url(fonts/AdvTime-2editotf.otf) format(opentype);
+    src: url(visual/fonts/AdvTime-2editotf.otf) format(opentype);
+    font-family: Credit;
+    scr: url() format(opentype);
 }
 h1{
     font-weight:lighter;
@@ -285,7 +287,14 @@ h1{
     padding: 20px;
     border-radius: 5px;
 }
-
+#logoImage{
+    position: absolute;
+    top: 0px; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    max-width: 100%; 
+    height: auto;
+}
 #close{
     position: relative;
     width: 100px;
@@ -304,10 +313,6 @@ h1{
 }
 #messageNoResponsive{
     border-radius: 10%;
-    background-image: url(images/messageBackground.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     /* background-color: aliceblue; */
     color: rgb(0, 0, 0);
     position:absolute;
@@ -317,10 +322,24 @@ h1{
     margin-left: 40vw;
      margin-bottom: 35vw;
      margin-top: 35vh;
-   
     z-index: 1000;
     text-align: center;
     text-shadow: 0 0 10px #fff, 0 0 10px #fff;
+}
+#messageNoResponsive::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url(visual/images/messageBackground.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: saturate(70%);
+    z-index: -1; 
+    border-radius: inherit; 
 }
 #buttonCloseMessage{
     font-family: Adventure Time;
