--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -268,6 +268,10 @@ a {
   justify-content: space-around;
   line-height: 0.9;
 }
+#div_zones .slots:nth-child(24) {
+  display: none;
+  visibility: hidden;
+}
 
 /*Experimental, factible*/
 #overlay_menu {
